fix swagger documenation
