# backend/docs/swagger.json
@@ -10,9 +10,9 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/journeys/:{page}": {
+        "/api/journeys/page/{page}": {
             "get": {
-                "description": "getJourneys returns 10 * page amount of journeys.",
+                "description": "GET /api/journeys/{page} returns 10 * page amount of journeys.",
                 "produces": [
                     "application/json"
                 ],
@@ -20,6 +20,15 @@
                     "Journeys"
                 ],
                 "summary": "Get journeys by page.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -38,12 +47,130 @@
                         "schema": {
                             "$ref": "#/definitions/types.ErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/stations/page/{page}": {
+            "get": {
+                "description": "GET /api/stations/{page} returns 10 * page amount of stations.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stations"
+                ],
+                "summary": "Get stations by page.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Station"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/stations/page/{page}/{name}": {
+            "get": {
+                "description": "GET api/stations/{page}/{string}",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stations"
+                ],
+                "summary": "Get stations by name.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "substring/name of station",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Station"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "types.Coordinates": {
+            "type": "object",
+            "properties": {
+                "x": {
+                    "type": "number"
+                },
+                "y": {
+                    "type": "number"
+                }
+            }
+        },
         "types.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -83,6 +210,47 @@
                     "type": "string"
                 },
                 "returnTime": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.Station": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "addressSwedish": {
+                    "type": "string"
+                },
+                "capacity": {
+                    "type": "integer"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "citySwedish": {
+                    "type": "string"
+                },
+                "coordinates": {
+                    "$ref": "#/definitions/types.Coordinates"
+                },
+                "fid": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nameEnglish": {
+                    "type": "string"
+                },
+                "nameSwedish": {
+                    "type": "string"
+                },
+                "operator": {
                     "type": "string"
                 }
             }
